--- a/Dockerfile.consumer
+++ b/Dockerfile.consumer
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-RUN go build -o consumer ./cmd/service
+RUN go build -o consumer ./cmd/consumer
 
 FROM debian:bullseye-slim
 WORKDIR /app
