--- a/Dockerfile.consumer
+++ b/Dockerfile.consumer
@@ -5,7 +5,7 @@ RUN go mod download
 COPY . .
 RUN go build -o consumer ./cmd/consumer
 
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 WORKDIR /app
 COPY --from=builder /app/consumer .
 COPY config.yaml .
