--- a/Dockerfile.producer
+++ b/Dockerfile.producer
@@ -5,7 +5,7 @@ RUN go mod download
 COPY . .
 RUN go build -o producer ./cmd/producer
 
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 WORKDIR /app
 COPY --from=builder /app/producer .
 COPY config.yaml .
